--- a/cart3.html
+++ b/cart3.html
@@ -71,7 +71,7 @@
                 </thead>
                 <tbody>
                     <tr class="cart-content">
-                        <td><a href="#"><img src="./img/products/p11.jpg" alt="酒漬葡萄超厚層布丁塔"></a></td>
+                        <td><a href="#"><img src="./img/p11.jpg" alt="酒漬葡萄超厚層布丁塔"></a></td>
                         <td><a href="#">酒漬葡萄超厚層布丁塔</a></td>
                         <td><span>NT $ <i>495</i></span></td>
                         <td><span class="cart-reduce">–</span><span class="cart-number">1</span><span
@@ -80,7 +80,7 @@
                         <td><span class="cart-delete">刪除</span></td>
                     </tr>
                     <tr class="cart-content">
-                        <td><a href="#"><img src="./img/products/p3.jpg" alt="蘋果千層酥派"></a></td>
+                        <td><a href="#"><img src="./img/p3.jpg" alt="蘋果千層酥派"></a></td>
                         <td><a href="#">蘋果千層酥派</a></td>
                         <td><span>NT $ <i>500</i></span></td>
                         <td><span class="cart-reduce">–</span><span class="cart-number">1</span><span
