--- a/login.html
+++ b/login.html
@@ -41,9 +41,11 @@
     <!-- center -->
     <!-- 位置指標 -->
     <div class="guid-tour-bar">
-        <a href="./index.html">首頁</a>
-        <img src="./img/ArrowTo.svg" alt="icon">
-        <a href="./login.html">登入</a>
+        <div class="guid-tour-bar-center">
+            <a href="./index.html">首頁</a>
+            <img src="./img/ArrowTo.svg" alt="icon">
+            <a href="./cart_empty.html">購物車</a>
+        </div>
     </div>
 
     <main>
@@ -146,7 +148,7 @@
         </div>
     </footer>
 
-    <script src="./index.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
