--- a/member_logut.html
+++ b/member_logut.html
@@ -43,9 +43,11 @@
 
     <!-- 位置指標 -->
     <div class="guid-tour-bar">
-        <a href="./index.html">首頁</a>
-        <img src="./img/ArrowTo.svg" alt="icon">
-        <a href="./member_logut.html">會員專區</a>
+        <div class="guid-tour-bar-center">
+            <a href="./index.html">首頁</a>
+            <img src="./img/ArrowTo.svg" alt="icon">
+            <a href="./cart_empty.html">購物車</a>
+        </div>
     </div>
 
     <main>
