--- a/product.html
+++ b/product.html
@@ -42,9 +42,11 @@
     <!-- center -->
     <!-- 位置指標 -->
     <div class="guid-tour-bar">
-        <a href="./index.html">首頁</a>
-        <img src="./img/ArrowTo.svg" alt="icon">
-        <a href="./product.html">商品資訊</a>
+        <div class="guid-tour-bar-center">
+            <a href="./index.html">首頁</a>
+            <img src="./img/ArrowTo.svg" alt="icon">
+            <a href="./cart_empty.html">購物車</a>
+        </div>
     </div>
 
     <main>
