購物車改版

--- a/cart2.html
+++ b/cart2.html
@@ -54,7 +54,7 @@
     </div>
 
     <main>
-        <div class="wrapper-cart">
+        <!-- <div class="wrapper-cart">
             <div class="wrapper-cart-contain">
                 <div class="cart-step">
                     <i class="bi bi-2-square"></i>
@@ -62,11 +62,11 @@
                 </div>
     
                 <form class="order-info">
-                    <p>訂購人資訊</p>
+                    <p>訂購人資訊</p> <span>登入累積點數，享有更多專屬優惠！<a href="./login.html">立即登入</a></span>
+                    
                     <label for="name">姓名<input type="text" id="name"></label>
-                    <label for="phone">電話
-                        <input type="text" id="phone">
-                    </label>
+                    <label for="phone">電話<input type="text" id="phone"></label>
+                    <label for="email">信箱<input type="text" id="email"></label>
                     <label for="address">地址
                         <select name="" id="address">
                             <option value="" disabled selected>城市 / 縣</option>
@@ -171,14 +171,18 @@
                     <td><span>NT $ <i>70</i></span></td>
                 </tr>
                 <tr>
+                    <td>會員優惠折抵</td>
+                    <td><span>- NT $ <i>50</i></span></td>
+                </tr>
+                <tr>
                     <td>總金額</td>
-                    <td><span>NT $ <i>1195</i></span></td>
+                    <td><span>NT $ <i>1145</i></span></td>
                 </tr>
             </table>
             <div style="clear: both;"></div>
 
-            <a href="" class="cart-next-step">前往結帳</a>
-        </div>
+            <a href="" class="cart-next-step">確定結帳</a>
+        </div> -->
     </main>
 
     <!-- footer -->
