--- a/cart.html
+++ b/cart.html
@@ -55,64 +55,128 @@
 
     <main>
         <div class="wrapper-cart">
-            <div class="cart-step">
-                <i class="bi bi-1-square"></i>
-                <span>請確認訂購數量</span>
-            </div>
+            <section class="cart-product-info">
+                <div class="buy-info">
+                    <h1>商品資訊</h1>
 
-            <table>
-                <thead>
-                    <tr class="cart-title">
-                        <th>商品</th>
-                        <th>品名</th>
-                        <th>適用優惠</th>
-                        <th>單一售價</th>
-                        <th>數量</th>
-                        <th>小計</th>
-                        <th></th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr class="cart-content">
-                        <td><a href="#"><img src="./img/p11.jpg" alt="酒漬葡萄超厚層布丁塔"></a></td>
-                        <td><a href="#">酒漬葡萄超厚層布丁塔</a></td>
-                        <td><span>雙 11 優惠 85 折</span></td>
-                        <td><span>NT $ <i>625</i></span></td>
-                        <td><span class="cart-reduce">–</span><span class="cart-number">1</span><span
-                                class="cart-plus">+</span></td>
-                        <td><span>NT $ <i>625</i></td>
-                        <td><span class="cart-delete">刪除</span></td>
-                    </tr>
-                    <tr class="cart-content">
-                        <td><a href="#"><img src="./img/p3.jpg" alt="蘋果千層酥派"></a></td>
-                        <td><a href="#">蘋果千層酥派</a></td>
-                        <td></td>
-                        <td><span>NT $ <i>500</i></span></td>
-                        <td><span class="cart-reduce">–</span><span class="cart-number">1</span><span
-                                class="cart-plus">+</span></td>
-                        <td><span>NT $ <i>500</i></td>
-                        <td><span class="cart-delete">刪除</span></td>
-                    </tr>
-                </tbody>
-            </table>
+                    <table>
+                        <thead>
+                            <tr class="cart-title">
+                                <th><input type="checkbox" checked></th>
+                                <th>商品</th>
+                                <th>品名</th>
+                                <th>單一售價</th>
+                                <th>數量</th>
+                                <th>小計</th>
+                                <th></th>
+                            </tr>
+                        </thead>
 
-            <table class="cart-total-price">
-                <tr>
-                    <td>商品總額</td>
-                    <td><span>NT $ <i>1125</i></span></td>
-                </tr>
-                <!-- <tr>
-                    <td>運費</td>
-                    <td><span>NT $ <i>70</i></span></td>
-                </tr>
-                <tr>
-                    <td>總金額</td>
-                    <td><span>NT $ <i>1195</i></span></td>
-                </tr> -->
+                        <tbody>
+                            <tr class="cart-content">
+                                <td><input type="checkbox" checked></td>
+                                <td><a href="#"><img src="./img/p11.jpg" alt="酒漬葡萄超厚層布丁塔"></a></td>
+                                <td><a href="#">酒漬葡萄超厚層布丁塔</a></td>
+                                <td><span>NT $ 625</span></td>
+                                <td><span class="cart-reduce">–</span><span class="cart-number">1</span><span
+                                        class="cart-plus">+</span></td>
+                                <td><span>NT $ 625</td>
+                                <td><span class="cart-delete">刪除</span></td>
+                            </tr>
+                            <tr class="cart-content">
+                                <td><input type="checkbox" checked></td>
+                                <td><a href="#"><img src="./img/p3.jpg" alt="蘋果千層酥派"></a></td>
+                                <td><a href="#">蘋果千層酥派</a></td>
+                                <td><span>NT $ 500</span></td>
+                                <td><span class="cart-reduce">–</span><span class="cart-number">1</span><span
+                                        class="cart-plus">+</span></td>
+                                <td><span>NT $ 500</td>
+                                <td><span class="cart-delete">刪除</span></td>
+                            </tr>
+                        </tbody>
 
-            </table>
-            <div style="clear: both;"></div>
-            <a href="cart2.html" class="cart-next-step">下一步</a>
+
+                    </table>
+                    <p>*同品項不同尺寸會依比例切分，例生巧克力塔/十吋 可切分成4個 生巧克力塔/單份．可購量也將依比例換算
+                        例如尚可購 2個生巧克力塔/十吋，相當於8個生巧克力塔/單份，以及 1個生巧克力塔/十吋 和 4個 生巧克力塔/單份</p>
+                </div>
+                <div class="send-info">
+                    <div class="send-info-left">
+                        <h1>寄送資訊</h1>
+                        <label for="getWay">取貨方式</label>
+                        <select name="" id="getWay">
+                            <option value="自取">自取</option>
+                            <option value="冷藏宅配">冷藏宅配</option>
+                            <option value="當日快遞">當日快遞</option>
+                        </select>
+                        <label for="geDate">取貨日期</label>
+                        <input type="date" id="geDate">
+                        <label for="geTime">取貨時段</label>
+                        <select name="" id="geTime">
+                            <option value="任何時段">任何時段</option>
+                            <option value="13:00 以前">13:00 以前</option>
+                            <option value="14:00 - 18:00">14:00 - 18:00</option>
+                        </select>
+                    </div>
+                    
+                    <div class="send-info-right">
+                        <h2>取貨方式資訊</h2>
+                        <h3>自取</h3>
+                        <p>* 甜點為當天製作，請於 10:00~18:00 間至門市領取。</p>
+                        <h3>冷藏宅配</h3>
+                        <p>* 甜點將在指定日期的前一天出爐，最快將於指定日期當天到貨。</p>
+                        <p>* 週四週日末提供宅配到貨</p>
+                        <h3>當日快遞</h3>
+                        <p>* 甜點當天製作，出爐後直接包裝出貨。按照當天訂單安排配送路線，遇塞車或雨天可能延遲，無法精準指定送達時間點。快遞司機不提供上樓服務，請務必至一樓取件。</p>
+                    </div>
+
+                </div>
+
+            </section>
+
+
+            <section class="cart-order-info">
+                <div class="buy-details">
+                    <h1>訂單明細</h1>
+                    <div class="order-item">
+                        <span>商品小計</span>
+                        <span>NT $ 1125</span>
+                    </div>
+                    <div class="order-sale">
+                        <span>會員折抵</span>
+                        <span>NT $ 0</span>
+                    </div>
+                    <div class="order-fare">
+                        <span>運費</span>
+                        <span>NT $ 0</span>
+                    </div>
+                    <div class="order-total">
+                        <span>總計</span>
+                        <span>NT $ 1125</span>
+                    </div>
+                    <div class="order-point">
+                        <h3>點數總計</h3>
+                        <div class="point-use">
+                            <span>本次消費使用點數</span>
+                            <span>0</span>
+                        </div>
+                        <div class="point-count">
+                            <span>本次消費累積點數(會員專屬)</span>
+                            <span>1125</span>
+                        </div>
+                    </div>
+                    <a href="#">訪客結帳</a>
+                </div>
+                <div class="cart-login-notice">
+                    <h1>還不是會員嗎？立即加入享有以下優惠：</h1>
+                    <ul>
+                        <li><i>累積點數：</i>消費可累積點數，讓每一筆購物更有價值。</li>
+                        <li><i>限時限定優惠：</i>隨時追蹤最新資訊，第一時間獲知限時優惠，不再錯過任何好康！</li>
+                        <li>現在快速加入，立即享受優惠！</li>
+                    </ul>
+                    <a href="./login.html">前往登入 / 註冊會員</a>
+                </div>
+            </section>
         </div>
 
     </main>
