頭尾確認一致

--- a/cart.html
+++ b/cart.html
@@ -36,7 +36,7 @@
                     <li><a href="./member_logut.html">會員專區</a></li>
                     <li><a href="./contact.html">聯絡我們</a></li>
                     <li><a href="./login.html">登入/註冊</a></li>
-                    <li><a href="./cart_empty.html"><i class="fa-solid fa-cart-shopping"></i></a><span>0</span></li>
+                    <li><a href="./cart.html"><i class="fa-solid fa-cart-shopping"></i></a><span>2</span></li>
                 </ul>
             </nav>
         </div>
