--- a/member_logut.html
+++ b/member_logut.html
@@ -33,7 +33,7 @@
                     <li><a href="./member_logut.html">會員專區</a></li>
                     <li><a href="./contact.html">聯絡我們</a></li>
                     <li><a href="./login.html">登入/註冊</a></li>
-                    <li><a href="./cart_empty.html"><i class="fa-solid fa-cart-shopping"></i></a><span>0</span></li>
+                    <li><a href="./cart.html"><i class="fa-solid fa-cart-shopping"></i></a><span>2</span></li>
                 </ul>
             </nav>
         </div>
@@ -46,7 +46,7 @@
         <div class="guid-tour-bar-center">
             <a href="./index.html">首頁</a>
             <img src="./img/ArrowTo.svg" alt="icon">
-            <a href="./cart_empty.html">購物車</a>
+            <a href="./member_logut.html">會員專區</a>
         </div>
     </div>
 
