購物車新增地址版本

--- a/cart2_self.html
+++ b/cart2_self.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -36,7 +37,7 @@
                     <li><a href="./member_logut.html">會員專區</a></li>
                     <li><a href="./contact.html">聯絡我們</a></li>
                     <li><a href="./login.html">登入/註冊</a></li>
-                    <li><a href="./cart_empty.html"><i class="fa-solid fa-cart-shopping"></i></a><span>0</span></li>
+                    <li><a href="./cart.html"><i class="fa-solid fa-cart-shopping"></i></a><span>2</span></li>
                 </ul>
             </nav>
         </div>
@@ -78,7 +79,7 @@
                             </ul>
                         </div>
                         <div>
-                            <h2>收件人資訊<p style="display: inline-block;font-weight: normal;font-size: 1rem;padding-left: 15px;"><input type="checkbox" style="transform: scale(1.2);">同訂購人資訊請勾選</p></h2>
+                            <h2>收件人資訊</h2>
                             <ul>
                                 <li style="flex-basis: 50%;">
                                     <label for="receiveName">姓名 *</label>
@@ -86,44 +87,6 @@
                                 </li>
                                 <li style="flex-basis: 46%;">
                                     <label for="receivePhone">電話 *</label>
-                                    <input type="text" id="receivePhone">
-                                </li>
-                                <li style="flex-basis: 48%;">
-                                    <label for="receiveAddress1">縣市 *</label>
-                                    <select name="" id="receiveAddress1">
-                                        <option value="" disabled selected>縣市</option>
-                                        <option value="基隆市">基隆市</option>
-                                        <option value="台北市">台北市</option>
-                                        <option value="新北市">新北市</option>
-                                        <option value="桃園市">桃園市</option>
-                                        <option value="新竹縣">新竹縣</option>
-                                        <option value="新竹市">新竹市</option>
-                                        <option value="宜蘭縣">宜蘭縣</option>
-                                        <option value="苗栗縣">苗栗縣</option>
-                                        <option value="台中市">台中市</option>
-                                        <option value="彰化縣">彰化縣</option>
-                                        <option value="南投縣">南投縣</option>
-                                        <option value="雲林縣">雲林縣</option>
-                                        <option value="嘉義縣">嘉義縣</option>
-                                        <option value="嘉義市">嘉義市</option>
-                                        <option value="台南市">台南市</option>
-                                        <option value="高雄市">高雄市</option>
-                                        <option value="屏東縣">屏東縣</option>
-                                        <option value="花蓮縣">花蓮縣</option>
-                                        <option value="台東縣">台東縣</option>
-                                        <option value="澎湖縣">澎湖縣</option>
-                                        <option value="金門縣">金門縣</option>
-                                        <option value="連江縣">連江縣</option>
-                                    </select>
-                                </li>
-                                <li style="flex-basis: 48%;">
-                                    <label for="receiveAddress2">區域 *</label>
-                                    <select name="" id="receiveAddress2">
-                                        <option value="" disabled selected>區域</option>
-                                    </select>
-                                </li>
-                                <li style="flex-basis: 100%;">
-                                    <label for="receiveAddress3">地址 *</label>
                                     <input type="text" id="receivePhone">
                                 </li>
                                 <li style="flex-basis: 100%;">
@@ -170,7 +133,7 @@
                             </tbody>
                             <tfoot>
                                 <tr>
-                                    <td>總計金額</td>
+                                    <td>總計</td>
                                     <td></td>
                                     <td>NT $ 1125</td>
                                 </tr>
