購物車自取新增同訂購人資訊

--- a/cart2_self.html
+++ b/cart2_self.html
@@ -79,7 +79,7 @@
                             </ul>
                         </div>
                         <div>
-                            <h2>收件人資訊</h2>
+                            <h2>收件人資訊<p style="display: inline-block;font-weight: normal;font-size: 1rem;padding-left: 15px;"><input type="checkbox" style="transform: scale(1.2);">同訂購人資訊請勾選</p></h2>
                             <ul>
                                 <li style="flex-basis: 50%;">
                                     <label for="receiveName">姓名 *</label>
