購物車圖標擺放層級變動

--- a/cart2_self.html
+++ b/cart2_self.html
@@ -37,7 +37,7 @@
                     <li><a href="./member_logut.html">會員專區</a></li>
                     <li><a href="./contact.html">聯絡我們</a></li>
                     <li><a href="./login.html">登入/註冊</a></li>
-                    <li><a href="./cart.html"><i class="fa-solid fa-cart-shopping"></i></a><span>2</span></li>
+                    <li><a href="./cart.html"><i class="fa-solid fa-cart-shopping"></i><span>2</span></a></li>
                 </ul>
             </nav>
         </div>
