--- a/cart2.html
+++ b/cart2.html
@@ -199,7 +199,7 @@
                 </div>
                 <div class="cart-step-button">
                     <a href="./cart.html">上一步</a>
-                    <a href="#">確定付款</a>
+                    <a href="./index.html">確定付款</a>
                 </div>
             </div>
         </div>
