--- a/item.html
+++ b/item.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sweet meet｜蜜遇。手工甜點｜經典、美味的選擇</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -72,7 +75,7 @@
                 <div class="item-info">
                     <h1>焦糖蘋果布蕾</h1>
                     <p>以青蘋果塊與特製苦甜焦糖細細熬煮，不僅保留蘋果天然酸甜，濃濃焦糖香，與軟軟綿綿的香草布蕾、北海道生乳香緹搭配，吃起來既飽滿又療癒，是少見詢問度特別高的小點心呦！</p>
-                    <b>NT $ 625</b>
+                    <b>NT $ 120</b>
                     <i>請選擇尺寸或種類</i>
                     <ul>
                         <li class="choose-size">單份</li>
@@ -181,7 +184,10 @@
 
         <div class="copyright">
             <div class="copyright-text">
-                <p>© 圖片素材版權皆歸 深夜裡的法國手工甜點 所有，本專案為個人專題作品，非品牌正式委託，如有侵權，請來信告知。Email: zhuog287@gmail.com</p>
+                <div class="copyright-text-left">
+                    <p>© 本網站為緯育TibaMe【第103期】前端工程師專業技術養成班學員作品,僅供學習、展示之用途。</p>
+                    <p>© 圖片素材版權皆歸 深夜裡的法國手工甜點 所有，本專案為個人專題作品，非品牌正式委託。</p>
+                </div>
                 <div class="social-account">
                     <a href=""><img src="./img/facebook.svg" alt="facebook"></a>
                     <a href=""><img src="./img/twitter.svg" alt="twitter"></a>
