修正細節+密碼查看改動

--- a/cart2.html
+++ b/cart2.html
@@ -202,7 +202,7 @@
                 </div>
                 <div class="cart-step-button">
                     <a href="./cart.html">上一步</a>
-                    <a href="./index.html">確定付款</a>
+                    <a href="./index.html">確定結帳</a>
                 </div>
             </div>
         </div>
