--- a/product.html
+++ b/product.html
@@ -11,7 +11,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css" integrity="sha512-dPXYcDub/aeb08c63jRq/k6GaKccl256JQy/AnOq7CAnEZ9FzSL9wSbcZkMp4R26vBsMLFYH4kQ67/bbV8XaCQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />  
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css"
+        integrity="sha512-dPXYcDub/aeb08c63jRq/k6GaKccl256JQy/AnOq7CAnEZ9FzSL9wSbcZkMp4R26vBsMLFYH4kQ67/bbV8XaCQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="shortcut icon" href="./img/logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -104,28 +108,28 @@
                     <li>
                         <div class="product-container-img">
                             <img src="./img/p2.jpg" alt="翻轉蘋果蛋糕">
-                            <a href="#"></a>
+                            <a href="./item.html"></a>
                             <span>加入購物車</span>
                         </div>
-                        <a href="#">翻轉蘋果蛋糕</a>
+                        <a href="./item.html">翻轉蘋果蛋糕</a>
                         <p>NT $ <span>500</span></p>
                     </li>
                     <li>
                         <div class="product-container-img">
                             <img src="./img/p3.jpg" alt="蘋果千層酥派">
-                            <a href="#"></a>
+                            <a href="./item.html"></a>
                             <span>加入購物車</span>
                         </div>
-                        <a href="#">蘋果千層酥派</a>
+                        <a href="./item.html">蘋果千層酥派</a>
                         <p>NT $ <span>500</span></p>
                     </li>
                     <li>
                         <div class="product-container-img">
                             <img src="./img/p4.jpg" alt="蛋白霜檸檬塔">
-                            <a href="#"></a>
+                            <a href="./item.html"></a>
                             <span>加入購物車</span>
                         </div>
-                        <a href="#">蛋白霜檸檬塔</a>
+                        <a href="./item.html">蛋白霜檸檬塔</a>
                         <p>NT $ <span>495</span></p>
                     </li>
                     <li>
