增加回到頂部標籤、js標籤

--- a/cart2_self.html
+++ b/cart2_self.html
@@ -170,6 +170,9 @@
                 </div>
             </div>
         </div>
+        <div class="toTop">
+            <i class="bi bi-arrow-bar-up"></i>
+        </div>
     </main>
 
     <!-- footer -->
@@ -237,7 +240,7 @@
             </div>
         </div>
     </footer>
-
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
