--- a/cart.html
+++ b/cart.html
@@ -182,7 +182,9 @@
                 </div>
             </section>
         </div>
-
+        <div class="toTop">
+            <i class="bi bi-arrow-bar-up"></i>
+        </div>
     </main>
 
     <!-- footer -->
@@ -250,7 +252,7 @@
             </div>
         </div>
     </footer>
-
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
