--- a/cart.html
+++ b/cart.html
@@ -81,20 +81,20 @@
                                 <td><input type="checkbox" checked></td>
                                 <td><a href="#"><img src="./img/p11.jpg" alt="酒漬葡萄超厚層布丁塔"></a></td>
                                 <td><a href="#">酒漬葡萄超厚層布丁塔</a></td>
-                                <td><span>NT $ 625</span></td>
+                                <td>NT $ <span class="cart-one">625</span></td>
                                 <td><span class="cart-reduce">–</span><span class="cart-number">1</span><span
                                         class="cart-plus">+</span></td>
-                                <td><span>NT $ 625</td>
+                                <td>NT $ <span class="cart-count">625</span></td>
                                 <td><span class="cart-delete">刪除</span></td>
                             </tr>
                             <tr class="cart-content">
                                 <td><input type="checkbox" checked></td>
                                 <td><a href="#"><img src="./img/p3.jpg" alt="蘋果千層酥派"></a></td>
                                 <td><a href="#">蘋果千層酥派</a></td>
-                                <td><span>NT $ 500</span></td>
+                                <td>NT $ <span span class="cart-one">500</span></td>
                                 <td><span class="cart-reduce">–</span><span class="cart-number">1</span><span
                                         class="cart-plus">+</span></td>
-                                <td><span>NT $ 500</td>
+                                <td>NT $ <span class="cart-count">500</span></td>
                                 <td><span class="cart-delete">刪除</span></td>
                             </tr>
                         </tbody>
