--- a/login.html
+++ b/login.html
@@ -61,13 +61,13 @@
             <div class="login-box">
                 <div class="form-box">
                     <h1>登入</h1>
-                    <form action="" method="post">
+                    <form action="" method="post" id="loginForm">
                         <div class="phone-email">
-                            <label for="phone-email">電郵或手機號碼</label>
+                            <label for="phone-email">電郵或手機號碼為 必填*</label>
                             <input type="text" placeholder="請輸入電郵或手機號碼" id="phone-email">
                         </div>
                         <div class="password">
-                            <label for="password">密碼</label>
+                            <label for="password">密碼為 必填*</label>
                             <input type="password" placeholder="請輸入密碼" id="password">
                             <span class="humbleicons--eye-close show"></span>
                             <span class="mage--eye"></span>
