--- a/contact.html
+++ b/contact.html
@@ -66,18 +66,18 @@
             </iframe>
             <div class="contact-table">
                 <form action="">
-                    <p>*電郵 是必填的</p>
-                    <input type="text" id="" placeholder="請輸入您的電郵或號碼">
-                    <p>*問題類型 是必填的</p>
-                    <select name="" id="">
+                    <label for="contact-phone">*電郵或號碼 是必填的</label>
+                    <input type="text" id="contact-phone" placeholder="請輸入您的電郵或號碼">
+                    <label for="contact-quest">*問題類型 是必填的</label>
+                    <select name="" id="contact-quest">
                         <option value="請選擇問題類型">請選擇問題類型</option>
                         <option value="商品詢問">商品詢問</option>
                         <option value="合作來信">合作來信</option>
                         <option value="顧客反饋">顧客反饋</option>
                         <option value="其他">其他</option>
                     </select>
-                    <p>*問題描述 是必填的</p>
-                    <textarea name="" id="" placeholder="問題描述"></textarea>
+                    <label for="contact-intro">*問題描述 是必填的</label>
+                    <textarea name="" id="contact-intro" placeholder="問題描述"></textarea>
                     <button>提交</button>
                 </form>
             </div>
