--- a/cart2.html
+++ b/cart2.html
@@ -82,7 +82,7 @@
                             </ul>
                         </div>
                         <div>
-                            <h2>收件人資訊<p style="display: inline-block;font-weight: normal;font-size: 1rem;padding-left: 15px;"><input type="checkbox" style="transform: scale(1.2);">同訂購人資訊請勾選</p></h2>
+                            <h2>收件人資訊<label for="same-info" style="display: inline-block;font-weight: normal;font-size: 1rem;padding-left: 15px;"><input type="checkbox" style="transform: scale(1.2);" id="same-info">同訂購人資訊請勾選</label></h2>
                             <ul>
                                 <li style="flex-basis: 50%;">
                                     <label for="receiveName">姓名 *</label>
@@ -128,7 +128,7 @@
                                 </li>
                                 <li style="flex-basis: 100%;">
                                     <label for="receiveAddress3">地址 *</label>
-                                    <input type="text" id="receivePhone">
+                                    <input type="text" id="receiveAddress3">
                                 </li>
                                 <li style="flex-basis: 100%;">
                                     <label for="receiveElse">備註</label>
