新增輪播圖套件

--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
                 referrerpolicy="no-referrer-when-downgrade">
             </iframe>
             <div class="contact-table">
-                <form action="">
+                <form action="" method="post">
                     <label for="contact-phone">*電郵或號碼 是必填的</label>
                     <input type="text" id="contact-phone" placeholder="請輸入您的電郵或號碼">
                     <label for="contact-quest">*問題類型 是必填的</label>
@@ -78,7 +78,7 @@
                     </select>
                     <label for="contact-intro">*問題描述 是必填的</label>
                     <textarea name="" id="contact-intro" placeholder="問題描述"></textarea>
-                    <button>提交</button>
+                    <button type="submit">提交</button>
                 </form>
             </div>
         </div>
