--- a/cart2.html
+++ b/cart2.html
@@ -190,7 +190,7 @@
                                 </tr>
                             </tfoot>
                         </table>
-                        <div class="cart-login-notice">
+                        <div class="cart-login-notice" style="margin-top: 70px; padding: 0; background-color: transparent;">
                             <h1>還不是會員嗎？立即加入享有以下優惠：</h1>
                             <ul>
                                 <li><i>累積點數：</i>消費可累積點數，一元累積一點，讓每一筆購物更有價值。</li>
