--- a/index.html
+++ b/index.html
@@ -191,14 +191,14 @@
         </div>
 
         <!-- 最新消息 -->
-        <div class="index-newInfo">
+        <!-- <div class="index-newInfo">
             <h1>立即訂閱電子報獲取最新資訊！</h1>
             <div class="subs">
                 <input type="text" placeholder="請輸入您的姓名">
                 <input type="text" placeholder="請輸入您的email">
                 <button>訂閱</button>
             </div>
-        </div>
+        </div> -->
 
         <div class="toTop">
             <i class="bi bi-arrow-bar-up"></i>
