--- a/register.html
+++ b/register.html
@@ -78,11 +78,11 @@
                             <span class="humbleicons--eye-close show"></span>
                             <span class="mage--eye"></span>
                         </div>
-                        <input type="checkbox" id="get-new">
-                        <label for="get-new">我願意接收最新優惠消息及相關推廣資訊</label>
-                        <br>
                         <input type="checkbox" id="privacy-policy">
                         <label for="privacy-policy">我同意網站<a href="#">服務條款</a>及<a href="#">隱私權政策</a></label>
+                        <br>
+                        <input type="checkbox" id="get-new" checked>
+                        <label for="get-new">我願意接收最新優惠消息及相關推廣資訊</label>
                         <button type="submit">註冊</button>
                     </form>
 
